[package]
name = "ufc-ripper"
version = "2.2.0"
description = "Video downloader tool for UFC Fight Pass"
authors = ["Mahesh Bandara Wijerathna <m4heshd@gmail.com>"]
license = "MIT"
repository = "https://github.com/m4heshd/ufc-ripper"
edition = "2021"

[[bin]]
name = "ufc-ripper"
path = "backend/src/bin/ufcr/main.rs"

[lib]
name = "ufcr_libs"
path = "backend/src/lib.rs"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
colored = "2.1.0"
form_urlencoded = "1.2.1"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
reqwest = { version = "0.12.0", features = ["json"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
socketioxide = "0.12.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
