[package]
name = "ufc-ripper"
version = "2.2.0"
description = "Video downloader tool for UFC Fight Pass"
authors = ["Mahesh Bandara Wijerathna <m4heshd@gmail.com>"]
license = "MIT"
repository = "https://github.com/m4heshd/ufc-ripper"
edition = "2021"

[[bin]]
name = "ufc-ripper"
path = "backend/src/bin/ufcr/main.rs"

[lib]
name = "ufcr_libs"
path = "backend/src/lib.rs"

[profile.release]
lto = "fat"

[dependencies]
anyhow = "1.0.81"
arc-swap = "1.7.1"
axum = "0.7.4"
axum-embed = "0.1.0"
bytes = "1.6.0"
colored = "2.1.0"
form_urlencoded = "1.2.1"
futures-util = "0.3.30"
once_cell = "1.19.0"
open = "5.1.2"
path-absolutize = "3.1.1"
regex-lite = "0.1.5"
reqwest = { version = "0.12.0", features = ["json", "stream"] }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
socketioxide = "0.12.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
