[workspace]
members = [
    "backend",
    "pack",
    "ufcr_libs"
]
default-members = [
    "backend"
]
resolver = "2"

[workspace.package]
version = "3.0.0"
authors = ["Mahesh Bandara Wijerathna <m4heshd@gmail.com>"]
license = "MIT"
repository = "https://github.com/m4heshd/ufc-ripper"
edition = "2021"
publish = false

[profile.dist]
inherits = "release"
lto = "fat"
