[package]
name = "ufc-ripper"
version = "2.2.0"
description = "Video downloader tool for UFC Fight Pass"
authors = ["Mahesh Bandara Wijerathna <m4heshd@gmail.com>"]
license = "MIT"
repository = "https://github.com/m4heshd/ufc-ripper"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["fs"] }
