[package]
name = "ufc-ripper"
description = "Video downloader tool for UFC Fight Pass"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "ufcr_util"
path = "src/lib.rs"

[features]
exe_res = []

[dependencies]
anyhow = "1.0.81"
arc-swap = "1.7.1"
axum = "0.7.5"
axum-embed = "0.1.0"
bytes = "1.6.0"
colored = "2.1.0"
dirs = "5.0.1"
form_urlencoded = "1.2.1"
futures-util = "0.3.30"
once_cell = "1.19.0"
open = "5.1.2"
path-absolutize = "3.1.1"
regex-lite = "0.1.5"
reqwest = { version = "0.12.3", default-features = false, features = ["json", "stream", "rustls-tls"] }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
socketioxide = "0.12.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
ufcr_libs = { path = "../ufcr_libs" }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[build-dependencies]
winresource = "0.1.17"

[package.metadata.packager]
product-name = "UFC Ripper"
identifier = "com.m4heshd.ufc-ripper"
resources = ["../config"]
icons = ["../project-res/images/ufc-ripper-icon.ico"]
out-dir = "../package/artifacts"

[package.metadata.packager.nsis]
installer-icon = "../project-res/images/ufc-ripper-icon.ico"
