[package]
name = "pack"
description = "Packager for UFC Ripper"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
fs_extra = "1.3.0"
ufcr_libs = { path = "../ufcr_libs" }
zip = "0.6.6"
zip-extensions = { git = "https://github.com/m4heshd/zip-extensions-rs.git", branch = "mappable-file-options" }
